--- a/.chalice/config.json
+++ b/.chalice/config.json
@@ -1,1 +1,17 @@
-
+{
+  "version": "2.0",
+  "app_name": "lambda_test",
+  "stages": {
+    "dev": {
+      "api_gateway_stage": "api",
+      "lambda_memory_size": 2048,
+      "lambda_timeout": 900
+    }
+  },
+  "environment_variables": {
+    "ORIGIN_BUCKET": "pdf-jibanendu",
+    "DESTINATION_BUCKET": "img-jibanendu",
+    "FMT": "png",
+    "DPI": "300"
+  }
+}
